fixed overlapping issue

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,7 +1,3 @@
-.container {
-  height: 60px;
-  background-color: #000;
-}
 
 .search {
   color: gray;
